# sqlite_bro

./: .gitignore  CHANGES.txt  CLAUDE.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  pyproject.toml  setup.py  sqlite_bro.py
.github/workflows/: publish.yml  tests.yml
appveyor/: install.ps1
docs/: base64_to_gif.py
sqlite_bro/: sqlite_bro.py
sqlite_bro/tests/: test_general.py  test_general_duckdb.py  test_general_no_gui.py  test_json.py
tests/: test_general.py
